fix wrapping name on mobile

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -116,6 +116,16 @@ div.list {
       height: 2rem;
       margin-right: 0.5rem;
     }
+    @media only screen and (max-width: 750px) {
+      h1{
+        font-size: 2rem;
+      }
+      img {
+        height: 1.3rem;
+        margin-right: 0.5rem;
+      }
+    }
+   
   }
   section {
     display: flex;
